Bug 824901 - HyperTextAccessible::DOMPointToHypertextOffset fails for node and offset equal to node child count, r=tbsaunde